objects/PricebookEntry/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>LDPE</fullName>
            </value>
            <value>
                <fullName>LLDPE</fullName>
            </value>
            <value>
                <fullName>LMDPE</fullName>
            </value>
            <value>
                <fullName>MDPE</fullName>
            </value>
            <value>
                <fullName>sHDPE</fullName>
            </value>
            <value>
                <fullName>sLLDPE</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>