objects/PricebookEntry/fields/Family_Adj_Amt__c.field-meta.xml
<CustomField>
    <fullName>Family_Adj_Amt__c</fullName>
    <label>Family Adj Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>