objects/PricebookEntry/fields/Manual_Override_Amt__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Amt__c</fullName>
    <label>Manual Override Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>