objects/PricebookEntry/fields/Product_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Name__c</fullName>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>